# ai-sim-trans

./: .gitignore  README.md  pom.xml
frontend/web/static/: app.js  index.html  style.css
native/windows-wasapi/: CMakeLists.txt  README.md
native/windows-wasapi/include/: LiveTranslateAudio.h
native/windows-wasapi/src/: LiveTranslateAudio.cpp
python/: asr_service.py  requirements-anime.txt  requirements-funasr.txt  requirements.txt
src/main/java/com/muyulu/aisimtrans/: AiSimTransApplication.java
src/main/java/com/muyulu/aisimtrans/asr/: AsrEvent.java  AsrEventType.java  AsrException.java  AsrProvider.java  RoutingAsrProvider.java
src/main/java/com/muyulu/aisimtrans/audio/: AudioCaptureException.java  AudioCaptureProvider.java  AudioChunk.java  AudioChunkListener.java  AudioFrameQueue.java
src/main/java/com/muyulu/aisimtrans/config/: SimTransProperties.java  WebSocketConfig.java
src/main/java/com/muyulu/aisimtrans/controller/: PipelineController.java  RuntimeController.java
src/main/java/com/muyulu/aisimtrans/correction/: CorrectionRequest.java  CorrectionResult.java  CorrectionReviewer.java  CorrectionSegment.java  OpenAiCompatibleCorrectionReviewer.java
src/main/java/com/muyulu/aisimtrans/pipeline/: PipelineStatus.java  SimTransPipelineService.java
src/main/java/com/muyulu/aisimtrans/runtime/: ModelStatus.java  RuntimeConfig.java  RuntimeConfigService.java  RuntimeConfigUpdate.java  (+1 more)
src/main/resources/: application.yml
src/main/resources/static/: app.js  index.html  style.css
src/test/java/com/muyulu/aisimtrans/: AiSimTransApplicationTests.java
(+42 files in other folders)
